# knova

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  settings_html.txt  tailwind.config.js  tsconfig.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1d77cb04e1a6_add_mcq_flashcard_contenttype_tag_.py  2a7ef8c2016a_add_user_bio.py  add_curiosity_score_to_users.py  add_ext_id_to_users.py  bf6c3f5b6353_initial_schema.py  sync_model_columns.py
backend/core/: config.py  logging.py  security.py
backend/models/: knova_als.pkl  knova_content_ranker.pkl  knova_feature_scaler.pkl  knova_thompson_sampler.pkl
backend/src/: deps.py
backend/src/auth/: router.py  schemas.py  service.py
backend/src/db/: models.py  session.py
backend/src/onboarding/: route.py  schemas.py  service.py
backend/src/posts/: router.py  schemas.py  service.py
backend/src/reference/: router.py  schemas.py  service.py
backend/src/users/: router.py  schemas.py  service.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
ml/: README.md
ml/data/: knova_content.csv  knova_feature_config.json  knova_follows.csv  knova_interactions.csv  knova_interests.csv  knova_topic_tags.csv  knova_topics.csv  knova_users.csv
ml/models/: knova_als.pkl  knova_als_content_ids.pkl  knova_als_user_ids.pkl  knova_content_ids.pkl  knova_content_model.pkl  knova_content_ranker.pkl  knova_feature_config.json  (+6 more)
(+102 files in other folders)
