[project]
name = "knova-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
